[package]
name = "kathleen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avl = "0.7.1"
derivative = "2.2.0"
heapless = "0.7.16"
linfa = "0.6.1"
linfa-clustering = "0.6.1"
linfa-datasets = { version = "0.6.1", features = ["generate"] }
linfa-nn = "0.6.1"
log = "0.4.19"
ndarray = "0.15.6"
ordered-float = "3.7.0"
rand_xoshiro = "0.6.0"
rocksdb = "0.21.0"
serde = { version = "1.0.166", features=["derive"] }
serde_cbor = "0.11.2"
